Test_files/invalidTestCases/fail_div.avm
push int16(3)
div
exit